maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:4: error: not found: value nombre
    nombre=random3()
    ^RandomMouseMaze:5: error: not found: value nombre
    if(nombre==1){
       ^RandomMouseMaze:7: error: not found: value nombre
    } else if(nombre==2){
              ^RandomMouseMaze:9: error: not found: value nombre
    } else if(nombre==3){
              ^